# visualization.goom

./: CMakeLists.txt
lib/fmt/include/: format
lib/goom/: CMakeLists.txt
lib/goom/include/goom/: convolve_fx.h  draw_methods.h  filter_buffers.h  filter_control.h  filter_data.h  filter_zoom_vector.h  filters.h  flying_stars_fx.h  goom_control.h  goom_dots_fx.h  goom_draw.h  goom_graphic.h  goom_visual_fx.h  goom_zoom_vector.h  ifs_dancers_fx.h  image_displacement.h  image_fx.h  lines_fx.h  sound_info.h  tentacle_driver.h  tentacles.h  tentacles_fx.h  text_draw.h  v2d.h
lib/goom/src/: convolve_fx.cpp  draw_methods.cpp  filter_buffers.cpp  filter_control.cpp  filter_zoom_vector.cpp  filters.cpp  flying_stars_fx.cpp  goom_control.cpp  goom_dots_fx.cpp  goom_draw.cpp  ifs_dancers_fx.cpp  image_displacement.cpp  image_fx.cpp  lines_fx.cpp  sound_info.cpp  tentacle3d.cpp.interesting  tentacle_driver.cpp  tentacles.cpp  tentacles_fx.cpp  text_draw.cpp
lib/goom/src/stats/: filter_stats.cpp  filter_stats.h  goom_control_stats.cpp  goom_control_stats.h  ifs_stats.h  line_stats.cpp  line_stats.h  sound_stats.h  stars_stats.h  tentacles_stats.cpp  tentacles_stats.h
lib/goomtests/: CMakeLists.txt
lib/goomtests/src/: test_colorutils.cpp  test_goomrand.cpp  test_strutils.cpp
lib/goomutils/: CMakeLists.txt
lib/goomutils/include/goomutils/: colormaps.h  colorutils.h  mathutils.h  random_colormaps.h  small_image_bitmaps.h  strutils.h
lib/goomutils/include/goomutils/colordata/: Accent.h  Blues.h  BrBG.h  BuGn.h  BuPu.h  CMRmap.h  Dark2.h  GnBu.h  Greens.h  Greys.h  OrRd.h  Oranges.h  PRGn.h  Paired.h  Pastel1.h  Pastel2.h  PiYG.h  PuBu.h  PuBuGn.h  PuOr.h  PuRd.h  Purples.h  RdBu.h  RdGy.h  RdPu.h  RdYlBu.h  RdYlGn.h  Reds.h  Set1.h  Set2.h  Set3.h  Spectral.h  Wistia.h  YlGn.h  YlGnBu.h  YlOrBr.h  YlOrRd.h  afmhot.h  all_maps.h  autumn.h  (+52 more)
lib/goomutils/src/: all_maps.cpp  colormaps.cpp  colorutils.cpp  goomrand.cpp  image_bitmaps.cpp  mathutils.cpp  random_colormaps.cpp  small_image_bitmaps.cpp  strutils.cpp
lib/vivid/: CMakeLists.txt
lib/vivid/examples/cmake/: CMakeLists.txt
lib/vivid/include/vivid/: conversion.h
lib/vivid/src/: hsl.cpp  rgb.cpp
lib/vivid/tests/: CMakeLists.txt  utility.h
src/: Main.cpp  Main.h
